# openGL_COMP371_PROJECT

./: CMakeLists.txt  README.md
src/: Backend.cpp  Backend.h  main.cpp  readme.txt  vao.cpp  vao.h
src/lib/: Camera.h  shader.h  shader_m.h
src/shaders/: depthShader.gs  depthShader.vs  lightShader.fs  textureShader.fs  textureShader.vs
